@@ -20,6 +20,7 @@
 [+] plxShow: ajout des fonctions staticCreationDate et staticUpdateDate pour afficher la date de création et de mise à jour d'une page statique
 [+] plxShow: ajout de la fonction artThumbnail pour afficher l'image d'accroche de l'article
 [+] plxShow::lastArtList - ajout du hook plxShowLastArtListContent
+[+] #126: plxShow::staticInclude - l'affichage tient compte si la page est active ou non
 [+] plxDate::formatDate() - ajout de la variable #time
 BUG fix #101: Thème par défaut - problème de retour à la ligne dans l'affichage des tags 
 BUG fix #102: Thème par défaut - la sidebar passe dans le footer après désactivation du captcha
